compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__strings__discard_concat_rest_pattern.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/strings.rs
assertion_line: 335
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" <> _ -> Nil\n    _ -> Nil\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    "Hello, " <> _ -> Nil
    _ -> Nil
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/1]).

-file("project/test/my/mod.gleam", 2).
-spec go(binary()) -> nil.
go(X) ->
    case X of
        <<"Hello, "/utf8, _/binary>> ->
            nil;

        _ ->
            nil
    end.
