compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__strings__not_unicode_escape_sequence2.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/strings.rs
assertion_line: 73
expression: "\npub fn not_unicode_escape_sequence() -> String {\n  \"\\\\\\\\u{03a9}\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn not_unicode_escape_sequence() -> String {
  "\\\\u{03a9}"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([not_unicode_escape_sequence/0]).

-file("project/test/my/mod.gleam", 2).
-spec not_unicode_escape_sequence() -> binary().
not_unicode_escape_sequence() ->
    <<"\\\\u{03a9}"/utf8>>.
