compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__strings__pipe_concat.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/strings.rs
assertion_line: 406
expression: "\nfn id(x) {\n  x\n}\n\npub fn main() {\n  { \"\" |> id } <> { \"\" |> id }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn id(x) {
  x
}

pub fn main() {
  { "" |> id } <> { "" |> id }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec id(I) -> I.
id(X) ->
    X.

-file("project/test/my/mod.gleam", 6).
-spec main() -> binary().
main() ->
    <<(begin
            _pipe = <<""/utf8>>,
            id(_pipe)
        end)/binary,
        (begin
            _pipe@1 = <<""/utf8>>,
            id(_pipe@1)
        end)/binary>>.
