compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__strings__rest_variable_rewriting.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/strings.rs
assertion_line: 320
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" <> x -> x\n    _ -> \"Unknown\"\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    "Hello, " <> x -> x
    _ -> "Unknown"
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/1]).

-file("project/test/my/mod.gleam", 2).
-spec go(binary()) -> binary().
go(X) ->
    case X of
        <<"Hello, "/utf8, X@1/binary>> ->
            X@1;

        _ ->
            <<"Unknown"/utf8>>
    end.
