compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__strings__string_of_number_concat.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/strings.rs
assertion_line: 349
expression: "\npub fn go(x) {\n  x <> \"1\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  x <> "1"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/1]).

-file("project/test/my/mod.gleam", 2).
-spec go(binary()) -> binary().
go(X) ->
    <<X/binary, "1"/utf8>>.
