compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__strings__string_prefix_assignment_not_unicode_escape_sequence.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/strings.rs
assertion_line: 243
expression: "\npub fn go(x) {\n  let _ = case x {\n    \"\\\\u{9}\" as start <> rest -> \"test\"\n    \"\\\\u{000009}\" as start <> rest -> \"test\"\n    \"\\\\u{21}\" as start <> rest -> \"test\"\n    \"\\\\u{100}\" as start <> rest -> \"test\"\n    \"\\\\u{1000}\" as start <> rest -> \"test\"\n    \"\\\\u{1F600}\" as start <> rest -> \"test\"\n    \"\\\\u{1f600}\" as start <> rest -> \"test\"\n    \"\\\\u{01F600}\" as start <> rest -> \"test\"\n    \"\\\\u{01f600}\" as start <> rest -> \"test\"\n    \"\\\\u{9} \\\\u{000009} \\\\u{21} \\\\u{100} \\\\u{1000} \\\\u{1F600} \\\\u{01F600}\" as start <> rest -> \"test\"\n    _ -> \"Unknown\"\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let _ = case x {
    "\\u{9}" as start <> rest -> "test"
    "\\u{000009}" as start <> rest -> "test"
    "\\u{21}" as start <> rest -> "test"
    "\\u{100}" as start <> rest -> "test"
    "\\u{1000}" as start <> rest -> "test"
    "\\u{1F600}" as start <> rest -> "test"
    "\\u{1f600}" as start <> rest -> "test"
    "\\u{01F600}" as start <> rest -> "test"
    "\\u{01f600}" as start <> rest -> "test"
    "\\u{9} \\u{000009} \\u{21} \\u{100} \\u{1000} \\u{1F600} \\u{01F600}" as start <> rest -> "test"
    _ -> "Unknown"
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/1]).

-file("project/test/my/mod.gleam", 2).
-spec go(binary()) -> binary().
go(X) ->
    _ = case X of
        <<"\\u{9}"/utf8, Rest/binary>> ->
            Start = <<"\\u{9}"/utf8>>,
            <<"test"/utf8>>;

        <<"\\u{000009}"/utf8, Rest@1/binary>> ->
            Start@1 = <<"\\u{000009}"/utf8>>,
            <<"test"/utf8>>;

        <<"\\u{21}"/utf8, Rest@2/binary>> ->
            Start@2 = <<"\\u{21}"/utf8>>,
            <<"test"/utf8>>;

        <<"\\u{100}"/utf8, Rest@3/binary>> ->
            Start@3 = <<"\\u{100}"/utf8>>,
            <<"test"/utf8>>;

        <<"\\u{1000}"/utf8, Rest@4/binary>> ->
            Start@4 = <<"\\u{1000}"/utf8>>,
            <<"test"/utf8>>;

        <<"\\u{1F600}"/utf8, Rest@5/binary>> ->
            Start@5 = <<"\\u{1F600}"/utf8>>,
            <<"test"/utf8>>;

        <<"\\u{1f600}"/utf8, Rest@6/binary>> ->
            Start@6 = <<"\\u{1f600}"/utf8>>,
            <<"test"/utf8>>;

        <<"\\u{01F600}"/utf8, Rest@7/binary>> ->
            Start@7 = <<"\\u{01F600}"/utf8>>,
            <<"test"/utf8>>;

        <<"\\u{01f600}"/utf8, Rest@8/binary>> ->
            Start@8 = <<"\\u{01f600}"/utf8>>,
            <<"test"/utf8>>;

        <<"\\u{9} \\u{000009} \\u{21} \\u{100} \\u{1000} \\u{1F600} \\u{01F600}"/utf8, Rest@9/binary>> ->
            Start@9 = <<"\\u{9} \\u{000009} \\u{21} \\u{100} \\u{1000} \\u{1F600} \\u{01F600}"/utf8>>,
            <<"test"/utf8>>;

        _ ->
            <<"Unknown"/utf8>>
    end.
