compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__strings__string_prefix_assignment_with_escape_sequences.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/strings.rs
assertion_line: 183
expression: "\npub fn go(x) {\n  let _ = case x {\n    \"\\f\" as start <> rest -> \"test\"\n    \"\\n\" as start <> rest -> \"test\"\n    \"\\r\" as start <> rest -> \"test\"\n    \"\\t\" as start <> rest -> \"test\"\n    \"\\\"\" as start <> rest -> \"test\"\n    \"\\\\\" as start <> rest -> \"test\"\n    \"\\f \\n \\r \\t \\\" \\\\\" as start <> rest -> \"control chars with prefix assignment\"\n    \"\\u{9}\" as start <> rest -> \"test\"\n    \"\\u{000009}\" as start <> rest -> \"test\"\n    \"\\u{21}\" as start <> rest -> \"test\"\n    \"\\u{100}\" as start <> rest -> \"test\"\n    \"\\u{1000}\" as start <> rest -> \"test\"\n    \"\\u{1F600}\" as start <> rest -> \"test\"\n    \"\\u{1f600}\" as start <> rest -> \"test\"\n    \"\\u{01F600}\" as start <> rest -> \"test\"\n    \"\\u{01f600}\" as start <> rest -> \"test\"\n    \"\\u{9} \\u{000009} \\u{21} \\u{100} \\u{1000} \\u{1F600} \\u{01F600}\" as start <> rest -> \"test\"\n    _ -> \"Unknown\"\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let _ = case x {
    "\f" as start <> rest -> "test"
    "\n" as start <> rest -> "test"
    "\r" as start <> rest -> "test"
    "\t" as start <> rest -> "test"
    "\"" as start <> rest -> "test"
    "\\" as start <> rest -> "test"
    "\f \n \r \t \" \\" as start <> rest -> "control chars with prefix assignment"
    "\u{9}" as start <> rest -> "test"
    "\u{000009}" as start <> rest -> "test"
    "\u{21}" as start <> rest -> "test"
    "\u{100}" as start <> rest -> "test"
    "\u{1000}" as start <> rest -> "test"
    "\u{1F600}" as start <> rest -> "test"
    "\u{1f600}" as start <> rest -> "test"
    "\u{01F600}" as start <> rest -> "test"
    "\u{01f600}" as start <> rest -> "test"
    "\u{9} \u{000009} \u{21} \u{100} \u{1000} \u{1F600} \u{01F600}" as start <> rest -> "test"
    _ -> "Unknown"
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/1]).

-file("project/test/my/mod.gleam", 2).
-spec go(binary()) -> binary().
go(X) ->
    _ = case X of
        <<"\f"/utf8, Rest/binary>> ->
            Start = <<"\f"/utf8>>,
            <<"test"/utf8>>;

        <<"\n"/utf8, Rest@1/binary>> ->
            Start@1 = <<"\n"/utf8>>,
            <<"test"/utf8>>;

        <<"\r"/utf8, Rest@2/binary>> ->
            Start@2 = <<"\r"/utf8>>,
            <<"test"/utf8>>;

        <<"\t"/utf8, Rest@3/binary>> ->
            Start@3 = <<"\t"/utf8>>,
            <<"test"/utf8>>;

        <<"\""/utf8, Rest@4/binary>> ->
            Start@4 = <<"\""/utf8>>,
            <<"test"/utf8>>;

        <<"\\"/utf8, Rest@5/binary>> ->
            Start@5 = <<"\\"/utf8>>,
            <<"test"/utf8>>;

        <<"\f \n \r \t \" \\"/utf8, Rest@6/binary>> ->
            Start@6 = <<"\f \n \r \t \" \\"/utf8>>,
            <<"control chars with prefix assignment"/utf8>>;

        <<"\x{9}"/utf8, Rest@7/binary>> ->
            Start@7 = <<"\x{9}"/utf8>>,
            <<"test"/utf8>>;

        <<"\x{000009}"/utf8, Rest@8/binary>> ->
            Start@8 = <<"\x{000009}"/utf8>>,
            <<"test"/utf8>>;

        <<"\x{21}"/utf8, Rest@9/binary>> ->
            Start@9 = <<"\x{21}"/utf8>>,
            <<"test"/utf8>>;

        <<"\x{100}"/utf8, Rest@10/binary>> ->
            Start@10 = <<"\x{100}"/utf8>>,
            <<"test"/utf8>>;

        <<"\x{1000}"/utf8, Rest@11/binary>> ->
            Start@11 = <<"\x{1000}"/utf8>>,
            <<"test"/utf8>>;

        <<"\x{1F600}"/utf8, Rest@12/binary>> ->
            Start@12 = <<"\x{1F600}"/utf8>>,
            <<"test"/utf8>>;

        <<"\x{1f600}"/utf8, Rest@13/binary>> ->
            Start@13 = <<"\x{1f600}"/utf8>>,
            <<"test"/utf8>>;

        <<"\x{01F600}"/utf8, Rest@14/binary>> ->
            Start@14 = <<"\x{01F600}"/utf8>>,
            <<"test"/utf8>>;

        <<"\x{01f600}"/utf8, Rest@15/binary>> ->
            Start@15 = <<"\x{01f600}"/utf8>>,
            <<"test"/utf8>>;

        <<"\x{9} \x{000009} \x{21} \x{100} \x{1000} \x{1F600} \x{01F600}"/utf8, Rest@16/binary>> ->
            Start@16 = <<"\x{9} \x{000009} \x{21} \x{100} \x{1000} \x{1F600} \x{01F600}"/utf8>>,
            <<"test"/utf8>>;

        _ ->
            <<"Unknown"/utf8>>
    end.
