compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__strings__string_prefix_assignment_with_guard.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/strings.rs
assertion_line: 167
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" as greeting <> name if name == \"Dude\" -> greeting <> \"Mate\"\n    \"Hello, \" as greeting <> name -> greeting\n    _ -> \"Unknown\"\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    "Hello, " as greeting <> name if name == "Dude" -> greeting <> "Mate"
    "Hello, " as greeting <> name -> greeting
    _ -> "Unknown"
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/1]).

-file("project/test/my/mod.gleam", 2).
-spec go(binary()) -> binary().
go(X) ->
    case X of
        <<"Hello, "/utf8, Name/binary>> when Name =:= <<"Dude"/utf8>> ->
            Greeting = <<"Hello, "/utf8>>,
            <<Greeting/binary, "Mate"/utf8>>;

        <<"Hello, "/utf8, Name@1/binary>> ->
            Greeting@1 = <<"Hello, "/utf8>>,
            Greeting@1;

        _ ->
            <<"Unknown"/utf8>>
    end.
