compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__strings__string_prefix_assignment_with_multiple_subjects.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/strings.rs
assertion_line: 290
expression: "\npub fn go(x) {\n  case x {\n    \"1\" as digit <> _ | \"2\" as digit <> _ -> digit\n    _ -> \"Unknown\"\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    "1" as digit <> _ | "2" as digit <> _ -> digit
    _ -> "Unknown"
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/1]).

-file("project/test/my/mod.gleam", 2).
-spec go(binary()) -> binary().
go(X) ->
    case X of
        <<"1"/utf8, _/binary>> ->
            Digit = <<"1"/utf8>>,
            Digit;

        <<"2"/utf8, _/binary>> ->
            Digit = <<"2"/utf8>>,
            Digit;

        _ ->
            <<"Unknown"/utf8>>
    end.
